feat(theme/colors): fix colors in accordance with Frontify

--- a/packages/components/src/ObjectViewer/Table/Table.scss
+++ b/packages/components/src/ObjectViewer/Table/Table.scss
@@ -32,7 +32,7 @@
 	:global(.btn-link) {
 		font-family: 'Inconsolata';
 		font-size: 12px;
-		color: $mine-shaft;
+		color: $black;
 		padding: 0;
 	}
 }
