--- a/packages/components/src/List/Content/Content.scss
+++ b/packages/components/src/List/Content/Content.scss
@@ -53,7 +53,7 @@ $line-height: 30px;
 
 			:global(.btn-link) {
 				border: none;
-				color: $mine-shaft;
+				color: $black;
 				font-size: $text-size;
 				font-weight: 600;
 				letter-spacing: 0;
