--- a/packages/theme/src/theme/_variables.scss
+++ b/packages/theme/src/theme/_variables.scss
@@ -17,13 +17,13 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 85%) !default;   // #bfbfbf
 
-$brand-primary:         $st-tropaz !default;
+$brand-primary:         $patina !default;
 $brand-primary-lighter: tint($brand-primary, 25) !default;
 $brand-primary-light:   tint($brand-primary, 12) !default;
 $brand-primary-dark:    shade($brand-primary, 12) !default;
 $brand-primary-darker:  shade($brand-primary, 25) !default;
 $brand-secondary:       $rio-grande !default;
-$brand-success:         $limeade !default;
+$brand-success:         $rio-grande !default;
 $brand-info:            $scooter !default;
 $brand-warning:         $lightning-yellow !default;
 $brand-danger:          $chestnut-rose !default;
