--- a/packages/components/src/ObjectViewer/JSONLike/JSONLike.scss
+++ b/packages/components/src/ObjectViewer/JSONLike/JSONLike.scss
@@ -89,7 +89,7 @@
 	}
 
 	.line-value {
-		max-width: calc(100% - 6em);
+		max-width: calc(100% - $padding-smaller);
 		color: $brand-primary;
 		vertical-align: bottom;
 		border: none;
